--- a/Yuno/src/fxml/YunoX.fxml
+++ b/Yuno/src/fxml/YunoX.fxml
@@ -8,9 +8,8 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
-
-
 <?import javafx.scene.layout.ColumnConstraints?>
+
 <GridPane fx:controller="fxml.Controller" xmlns:fx="http://javafx.com/fxml" alignment="CENTER" hgap="10" vgap="10">
   <columnConstraints>
     <ColumnConstraints percentWidth="100" hgrow="ALWAYS"/>
@@ -64,8 +63,6 @@
   </GridPane>
   <GridPane fx:id="gridPaneGame" visible="false" alignment="CENTER" hgap="10" vgap="10">
 
-    <Label fx:id="playerLabel" />
-
     <columnConstraints>
       <ColumnConstraints percentWidth="5" hgrow="SOMETIMES"/>
       <ColumnConstraints percentWidth="90" hgrow="ALWAYS"/>
@@ -85,6 +82,9 @@
         <Image url="@/fxml/assets/yuno-card-background.png" />
       </ImageView>
     </GridPane> -->
+
+    <Label fx:id="playerLabel" GridPane.rowIndex="1" GridPane.columnIndex="1" alignment="CENTER"/>
+
     <ImageView GridPane.rowIndex="2" GridPane.columnIndex="1" fx:id="discardTopCardImage"/>
 
     <ListView fx:id="playerHandListView" GridPane.columnIndex="1" GridPane.rowIndex="3" maxWidth="Infinity" maxHeight="Infinity" orientation="HORIZONTAL" onMouseClicked="#activatePlayCard"/>
@@ -94,11 +94,14 @@
       <Button text="Draw Card" GridPane.columnIndex="2" GridPane.rowIndex="1" onAction="#drawCard" fx:id="drawCardButton" />
       <Button text="Next Player" GridPane.rowIndex="1" GridPane.columnIndex="3" onAction="#nextPlayer" disable="true" fx:id="nextPlayer"/>
 
-      <Button text="Call Yuno" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
-      <Button text="Call Yuno on Previous" GridPane.rowIndex="2" GridPane.columnIndex="2" GridPane.columnSpan="2"/>
+      <Button text="Call Yuno" GridPane.rowIndex="2" GridPane.columnIndex="1" onAction="#callYuno"/>
+      <Button text="Call Yuno on Previous" GridPane.rowIndex="2" GridPane.columnIndex="2" GridPane.columnSpan="2" onAction="#callYunoOnPrevious"/>
     </GridPane>
   </GridPane>
 
+  <GridPane fx:id="gridPaneWin" visible="false">
+    <Label fx:id="winLabel" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+  </GridPane>
 </GridPane>
 
 <!--
